--- a/index.html
+++ b/index.html
@@ -14,5 +14,22 @@
       <li>ほげほげ</li>
       <li>ほにゃらら</li>
     </ol>
+    <h1>練習問題2.3</h1>
+    <dl>
+      <dt>作者</dt>
+      <dd>ジョン</dd>
+      <dd>ポール</dd>
+      <dd>ジョージ</dd>
+      <dd>リンゴ</dd>
+    </dl>
+
+    <dl>
+      <dt lang="ja"><dfn>色</dfn></dt>
+      <dt lang="en-US"><dfn>color</dfn></dt>
+      <dd>可視光線の長短によって人が視覚で感じ分けられる色覚・色刺激のこと</dd>
+    </dl>
+    <p>ゲームの得点は以下の順序で計算されます。
+    </p>
+    <dl>金貨を</dl>
   </body>
 </html>
