--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
     </dl>
     <p>ゲームの得点は以下の順序で計算されます。
     </p>
-    <dl>金貨を</dl>
+    <dl>
+      <dt>金貨を獲得している場合</dt>
+      <dd>金貨一枚につき10ポイント加算されます。
+      </dd>
+      <dt>銀貨を獲得している場合</dt>
+      <dd>銀貨一枚につき1ポイント加算されます。</dd>
+      <dt>mai</dt>
+    </dl>
   </body>
 </html>
