--- a/index.html
+++ b/index.html
@@ -160,6 +160,27 @@
     <a href="a.html" target="abc">abcという名前のフレームにリンクします。</a><br>
 
     <h1>練習問題3.3</h1>
-    
+    ファイルの途中にidでabcという名前を付けます。
+
+    <a href="#abc">abcと名前を付けた場所へリンクします</a><br>
+
+    <a href="a.html#def">別ファイルの名前を付けた場所へリンクします</a>
+
+    <h1>練習問題3.4</h1>
+    <aside class="ad">
+      <h1>広報</h1>
+      <a href="https://www.josai.ac.jp/tjp/news/nid00000293/">
+        <section>
+          <h1>【女子ソフトボール部】秋季リーダ戦で優勝！４季連続優勝を果たしました！
+          </h1>
+          <p>2024年10月12日、10月14、10月19日、東京国際大学ソフトボール場を会場に開催された第24回関東学生女子ソフトボール秋季リーダ戦（Ⅰ部）で、女子ソフトボール部が優勝しました。2023年度の夏季リーダ、2024年度の春季リーダに続き、４季連続での優勝となり、城西大学女子ソフトボール史上初の決挙となりました！</p>
+          <a href="https://www.josai.ac.jp/about/facility/shimokawa/">
+            <section>
+              <h1>城西大学　JOSAI SPORTS FIELD</h1>
+              <p>2020年9月に完成した、城西大学の新しいスポーツ実施です。サッカー場２面、ソフトボール場１面、人工芝敷き詰める約１ｋｍの周回ランニング走路を整備しました。サッカー場の人工芝、ソフトボール場の舗装にも足に優しい人工芝を特に選んでいます。</p>
+            </section></a>
+        </aside>
+
+        
     </body>
 </html>
