--- a/index.html
+++ b/index.html
@@ -179,8 +179,17 @@
               <h1>城西大学　JOSAI SPORTS FIELD</h1>
               <p>2020年9月に完成した、城西大学の新しいスポーツ実施です。サッカー場２面、ソフトボール場１面、人工芝敷き詰める約１ｋｍの周回ランニング走路を整備しました。サッカー場の人工芝、ソフトボール場の舗装にも足に優しい人工芝を特に選んでいます。</p>
             </section></a>
-        </aside>
+        </section>
+      </a>
+    </aside>>
 
-        
+    <h1>練習問題3.5</h1>
+    <nav>
+      <ul>
+        <li><a href="https://www.josai.ac.jp/tjp/club/dansiekiden/">男子駅伝部</a></li>
+        <li><a href="https://www.josai.ac.jp/tjp/club/josiekiden/">女子駅伝部</a></li>
+        <li><a>クラブ・サークル活動</a></li>
+      </ul>
+    </nav>
     </body>
 </html>
