--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                                                     name="date"></label><input type="submit" value="送信"></form>
     <form action="xxx.php" method="post"><label>ローカル日時(type="datetime-local"):<input type="datetime-local"
                                                                     name="datetime-local"></label><input type="submit" value="送信"></form>
-    <form action="xxx.php" method="label"><label>月(type="month"):<input type="month"
+    <form action="xxx.php" method="post"><label>月(type="month"):<input type="month"
                                                                     name="month"></label><input type="submit" value="送信"></form>
     <form action="xxx.php" method="post"><label>週(type="week"):<input type="week"
                                                                     name="week"></label><input type="submit" value="送信"></form>
@@ -120,7 +120,7 @@
     <h1>練習問題2.8</h1>
     <p><label>名前：<input type="text" name="name" size="30" maxlength="20"></label></p>
     <p><label>パスワード:<input type="password" name="pass" size="6"
-                      maxlength="4"</label></p>
+                      maxlength="4"></label></p>
     <p>学年:
       <label><input type="radio" name="gakunen" value="1">1年生</label>
       <label><input type="radio" name="gakunen" value="2">2年生</label>
@@ -144,8 +144,8 @@
     </p>
     
     <h1>練習問題3.1</h1>
-    <a href="a.html">相対パスでリンクします。</a>
-    <a href="a.html">相対パスでリンクします</a>>br>
+    <a href="a.html">相対パスでリンクします。</a><br>
+    <a href="a.html">相対パスでリンクします</a><br>
     <a href=https://www.josai.ac.jp/management/>絶対パスで城西大学経営学部へリンクします。</a><br>
     <a href="mailto:zm24525@josai.ac.jp">自分宛メール（自分のメールアドレスを入力）</a><br>
     <a href="https://www.josai.ac.jp/management/">
@@ -171,17 +171,16 @@
       <h1>広報</h1>
       <a href="https://www.josai.ac.jp/tjp/news/nid00000293/">
         <section>
-          <h1>【女子ソフトボール部】秋季リーダ戦で優勝！４季連続優勝を果たしました！
-          </h1>
+          <h1>【女子ソフトボール部】秋季リーダ戦で優勝！４季連続優勝を果たしました！</h1>
           <p>2024年10月12日、10月14、10月19日、東京国際大学ソフトボール場を会場に開催された第24回関東学生女子ソフトボール秋季リーダ戦（Ⅰ部）で、女子ソフトボール部が優勝しました。2023年度の夏季リーダ、2024年度の春季リーダに続き、４季連続での優勝となり、城西大学女子ソフトボール史上初の決挙となりました！</p>
           <a href="https://www.josai.ac.jp/about/facility/shimokawa/">
             <section>
               <h1>城西大学　JOSAI SPORTS FIELD</h1>
               <p>2020年9月に完成した、城西大学の新しいスポーツ実施です。サッカー場２面、ソフトボール場１面、人工芝敷き詰める約１ｋｍの周回ランニング走路を整備しました。サッカー場の人工芝、ソフトボール場の舗装にも足に優しい人工芝を特に選んでいます。</p>
-            </section></a>
+            </section>
+          </a>
         </section>
-      </a>
-    </aside>>
+    </aside>
 
     <h1>練習問題3.5</h1>
     <nav>
