--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
-    <title> Web開発の練習１</title>
+    <title> Web開発の練習2024</title>
+    <link rel="stylesheet" href="mystyle.css">
+    <!--この行を追加-->
   </head>
   <body>
     <!--文字の大きさの練習-->
@@ -190,5 +192,7 @@
         <li><a>クラブ・サークル活動</a></li>
       </ul>
     </nav>
+
+    
     </body>
 </html>
