--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title> Web開発の練習2024</title>
     <link rel="stylesheet" href="mystyle.css">
-    <!--この行を追加-->
   </head>
   <body>
+    <!--ここに本文やテーブルなど-->
     <!--文字の大きさの練習-->
     <h1>練習問題2.2</h1>
     <h1>Hello World</h1>
