--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
     <a href=https://www.josai.ac.jp/management/>絶対パスで城西大学経営学部へリンクします。</a><br>
     <a href="mailto:zm24525@josai.ac.jp">自分宛メール（自分のメールアドレスを入力）</a><br>
     <a href="https://www.josai.ac.jp/management/">
-
-      <img src="keiei_small.jpg" alt="城西大学経営学部"></a>
+    <img src="./image/keiei_small.jpg" alt="城西大学経営
+      学部"></a>
 
     <h1>練習問題3.2</h1>
     <a href="a.html" target="_blank">別画面を開いてリンクします。</a><br>
@@ -162,6 +162,7 @@
     <a href="a.html" target="abc">abcという名前のフレームにリンクします。</a><br>
 
     <h1>練習問題3.3</h1>
+    
     ファイルの途中にidでabcという名前を付けます。
 
     <a href="#abc">abcと名前を付けた場所へリンクします</a><br>
