--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         <strong>お寿司をどこで食べるか？その長所と短所</strong>
       </caption>
       <thead>
+        <th class="important">長所</th>
         <tr><th>どこで食べるか</th><th>長所</th><th>短所</th></tr>
       </thead>
       <tbody>
