--- a/index.html
+++ b/index.html
@@ -192,7 +192,9 @@
         <li><a>クラブ・サークル活動</a></li>
       </ul>
     </nav>
-    
+
+    <th class="important">長所</th>
+
     <p class="sample1">セキュリティ対策は今後ますます重要になるでしょう。</p>
     <p class="sample2">セキュリティ対策は今後ますます重要になるでしょう。</p>
     <p class="sample3">セキュリティ対策は今後ますます重要になるでしょう。</p>
