--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </details>
       </caption>
       <thead>
-        <tr><th>長所</th><th>どこで食べるか</th><th>短所</th></tr>
+        <tr><th class="important">長所</th><th>どこで食べるか</th><th>短所</th></tr>
       </thead>
       <tbody>
         <tr><td>ネタにこだわり、技術が素晴らしい</td><th>銀座の高級店</th><td>値段が時価で不安、予約が必要</td></tr>
@@ -69,15 +69,13 @@
         <strong>お寿司をどこで食べるか？その長所と短所</strong>
       </caption>
       <thead>
-        <tr><th>どこで食べるか</th><th>長所</th><th>短所</th></tr>
+        <tr><th>どこで食べるか</th><th class="important">長所</th><th>短所</th></tr>
       </thead>
       <tbody>
         <tr><th>銀座の高級店</th><td>ネタにこだわり、技術が素晴らしい</td><td>値段が時価で不安、予約が必要</td></tr>
         <tr><th>回転寿司</th><td>値段が良心的、気軽に手に取れる</td><td>ネタが解凍もの、休みの日は混む</td></tr>
       </tbody>
     </table>
-    <th class="important">長所</th>
-    
     <p class="sample1">セキュリティ対策は今後ますます重要になるでしょう。</p>
     <p class="sample2">セキュリティ対策は今後ますます重要になるでしょう。</p>
     <p class="sample3">セキュリティ対策は今後ますます重要になるでしょう。</p>
