--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title> Web開発の練習2024</title>
     <link rel="stylesheet" href="mystyle.css">
+    <script scr="myjs.js"></script>
+    <!--この行を追加-->
   </head>
   <body>
     <!--ここに本文やテーブルなど-->
