--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title> Web開発の練習2024</title>
     <link rel="stylesheet" href="mystyle.css">
-    <script scr="myjs.js"></script>
+    <script src="myjs.js"></script>
     <!--この行を追加-->
   </head>
   <body>
