--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
           <a href="https://www.josai.ac.jp/about/facility/shimokawara/">
             <section>
               <h1>城西大学　JOSAI SPORTS FIELD</h1>
+              <p> JOSAI SPORTs FIELD 【城西大学　坂戸キャンパス】</p>
               <p>2020年9月に完成した、城西大学の新しいスポーツ実施です。サッカー場２面、ソフトボール場１面、人工芝敷き詰める約１ｋｍの周回ランニング走路を整備しました。サッカー場の人工芝、ソフトボール場の舗装にも足に優しい人工芝を特に選んでいます。</p>
             </section>
           </a>
-        </section>
     </aside>
 
     <h1>練習問題3.5</h1>
